--- a/signup.html
+++ b/signup.html
@@ -7,7 +7,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>注册 | Sign up</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/normalize.css@8.0.1/normalize.css">
-    <link rel="stylesheet" href="common.css">
+    <link rel="stylesheet" href="login.css">
+    <script src="common.js"></script>
     <script src="signup.js"></script>
 </head>
 <body>
@@ -21,8 +22,8 @@
             <div id="form">
                 <span class="key">用户名：</span><input class="input" id="accountName" type="text" placeholder="你的用户名">
                 <span class="key">邮箱：</span><input class="input" id="email" type="text" placeholder="你的电子邮箱">
-                <span></span><span id="codeWrapper"><input type="text" class="input" id="textCode" placeholder="验证码"><span id="btnGetCode">获取验证码</span></span>
                 <span class="key">手机号：</span><input class="input" id="phoneNumber" type="text" placeholder="你的手机号">
+                <span></span><span id="codeWrapper"><input type="text" class="input" id="textCode" placeholder="验证码"><span id="btnGetCode">获取验证码</span></span>
                 <span class="key">密码：</span><input class="input" id="password" type="password" placeholder="8-16位字母、数字或字符组合">
                 <span></span><input class="input" id="retypePassword" type="password" placeholder="请再次输入">
             </div>
