--- a/signin.html
+++ b/signin.html
@@ -2,30 +2,31 @@
 <html lang="zh-cn">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
+          name="viewport">
+    <meta content="ie=edge" http-equiv="X-UA-Compatible">
     <title>登录 | Sign in</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/normalize.css@8.0.1/normalize.css">
-    <link rel="stylesheet" href="login.css">
+    <link href="https://cdn.jsdelivr.net/npm/normalize.css@8.0.1/normalize.css" rel="stylesheet">
+    <link href="common.css" rel="stylesheet">
+    <link href="login.css" rel="stylesheet">
     <script src="common.js"></script>
     <script src="signin.js"></script>
 </head>
 <body>
-    <div id="Wrapper">
-        <div id="picWrapper"></div>
-        <div id="formWrapper">
-            <div id="mainTitle" class="mainTitle">
-                <div>欢迎登录，</div>
-                <div>TODOList</div>
-            </div>
-            <div id="form">
-                <span class="key">账号：</span><input class="input" id="account" type="text" placeholder="手机号、邮箱或用户名">
-                <span class="key">密码：</span><input class="input" id="password" type="password" placeholder="请输入密码">
-            </div>
-            <div id="btnSubmit">登录账号</div>
+<div id="Wrapper">
+    <div id="picWrapper"></div>
+    <div id="formWrapper">
+        <div class="mainTitle" id="mainTitle">
+            <div>欢迎登录，</div>
+            <div>TODOList</div>
         </div>
+        <div id="form">
+            <span class="key">账号：</span><input class="input" id="account" placeholder="手机号、邮箱或用户名" type="text">
+            <span class="key">密码：</span><input class="input" id="password" placeholder="请输入密码" type="password">
+        </div>
+        <div id="btnSubmit">登录账号</div>
     </div>
-    <div id="nWrapper"></div>
+</div>
+<div id="nWrapper"></div>
 </body>
 </html>
