--- a/signup.html
+++ b/signup.html
@@ -2,34 +2,37 @@
 <html lang="zh-cn">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
+          name="viewport">
+    <meta content="ie=edge" http-equiv="X-UA-Compatible">
     <title>注册 | Sign up</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/normalize.css@8.0.1/normalize.css">
-    <link rel="stylesheet" href="login.css">
+    <link href="https://cdn.jsdelivr.net/npm/normalize.css@8.0.1/normalize.css" rel="stylesheet">
+    <link href="common.css" rel="stylesheet">
+    <link href="login.css" rel="stylesheet">
     <script src="common.js"></script>
     <script src="signup.js"></script>
 </head>
 <body>
-    <div id="Wrapper">
-        <div id="picWrapper"></div>
-        <div id="formWrapper">
-            <div class="mainTitle" id="mainTitle">
-                <div>欢迎注册，</div>
-                <div>TODOList</div>
-            </div>
-            <div id="form">
-                <span class="key">用户名：</span><input class="input" id="accountName" type="text" placeholder="你的用户名">
-                <span class="key">邮箱：</span><input class="input" id="email" type="text" placeholder="你的电子邮箱">
-                <span class="key">手机号：</span><input class="input" id="phoneNumber" type="text" placeholder="你的手机号">
-                <span></span><span id="codeWrapper"><input type="text" class="input" id="textCode" placeholder="验证码"><span id="btnGetCode">获取验证码</span></span>
-                <span class="key">密码：</span><input class="input" id="password" type="password" placeholder="8-16位字母、数字或字符组合">
-                <span></span><input class="input" id="retypePassword" type="password" placeholder="请再次输入">
-            </div>
-            <div id="btnSubmit">注册账号</div>
+<div id="Wrapper">
+    <div id="picWrapper"></div>
+    <div id="formWrapper">
+        <div class="mainTitle" id="mainTitle">
+            <div>欢迎注册，</div>
+            <div>TODOList</div>
         </div>
+        <div id="form">
+            <span class="key">用户名：</span><input class="input" id="accountName" placeholder="你的用户名" type="text">
+            <span class="key">邮箱：</span><input class="input" id="email" placeholder="你的电子邮箱" type="text">
+            <span class="key">手机号：</span><input class="input" id="phoneNumber" placeholder="你的手机号" type="text">
+            <span></span><span id="codeWrapper"><input class="input" id="textCode" placeholder="验证码" type="text"><span
+                id="btnGetCode">获取验证码</span></span>
+            <span class="key">密码：</span><input class="input" id="password" placeholder="8-16位字母、数字或字符组合"
+                                               type="password">
+            <span></span><input class="input" id="retypePassword" placeholder="请再次输入" type="password">
+        </div>
+        <div id="btnSubmit">注册账号</div>
     </div>
-    <div id="nWrapper"></div>
+</div>
+<div id="nWrapper"></div>
 </body>
 </html>
