完成登出功能

--- a/app.html
+++ b/app.html
@@ -15,7 +15,7 @@
 <div id="wrapper">
     <div class="banner" id="bannerWrapper">
         <span class="mainTitle" id="mainTitle">TODOList</span>
-        <span class="subTitle" id="userTitle">RainChen_</span>
+        <span class="subTitle" id="userTitle"><span id="btnLogout">登出</span></span>
     </div>
     <div id="categoryWrapper">
         <span class="category catSelected" id="catTodo">未开始</span>
